[AOD-79] Fix vertical scroller overflow

--- a/app/topologies/DetailsBar/DetailsBar.scss
+++ b/app/topologies/DetailsBar/DetailsBar.scss
@@ -1,6 +1,8 @@
 @import '../../components/shared/config';
 
 .DetailsBar {
+  @include custom-prop(--vertical-scroller-background, #{color('grey', 'xx-light')});
+
   -webkit-overflow-scrolling: touch;
   align-items: flex-start;
   background-color: color('grey', 'xx-light');
