--- a/app/topologies/TabBar/TabBar.scss
+++ b/app/topologies/TabBar/TabBar.scss
@@ -2,6 +2,7 @@
 
 .TabBar {
   background-color: color('white');
+  @include custom-prop(--vertical-scroller-background, #{color('white')});
   display: flex;
   flex-direction: row;
 
